--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "http-server": "^0.11.1",
     "node-record-lpcm16": "^0.3.1",
     "nodemon": "^1.19.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {},
   "description": ""
